# cmdr-fsevent-stream

./: Cargo.toml
examples/: simple.rs
src/: ffi.rs  flags.rs  lib.rs  stream.rs  tests.rs
